[mod] 회원가입 및 이메일 재로그인 텍스트필드 힌트 문구 변경

--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -101,7 +101,7 @@
                 style="@style/Widget.EditText.Basic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/email"
+                android:hint="@string/sign_email_hint"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:onTextChanged="@{viewModel::onRegistrationEmailTextChanged}"
