--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -103,7 +103,7 @@
                 style="@style/Widget.EditText.Basic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/password"
+                android:hint="@string/sign_password_hint"
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:onTextChanged="@{viewModel::onRegistrationPasswordTextChanged}"
