[mod] Ux Writing 변경

--- a/app/src/main/res/layout/dialog_bottom_shop_link_input.xml
+++ b/app/src/main/res/layout/dialog_bottom_shop_link_input.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/shop_link"
+                android:text="@string/shop_link_dialog_title"
                 android:textAppearance="@style/Widget.Dialog.TextAppearance.Title"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
                     style="@style/Widget.EditText.Basic"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/shop_link"
+                    android:hint="@string/shop_link_dialog_hint"
                     android:inputType="textUri"
                     android:maxLines="1"
                     android:onTextChanged="@{viewModel::onItemUrlInputTextChanged}"
