--- a/app/src/main/res/layout/dialog_bottom_folder_upload.xml
+++ b/app/src/main/res/layout/dialog_bottom_folder_upload.xml
@@ -71,7 +71,7 @@
                     style="@style/Widget.EditText.Basic"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/folder_name"
+                    android:hint="@string/new_folder_dialog_hint"
                     android:inputType="text"
                     android:maxLength="10"
                     android:maxLines="1"
