[mod] 텍스트 컬러 변경

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="ultra_semi_transparent">#10000000</color>
     <color name="black_transparent">#38000000</color>
 
-    <color name="green_700">#31E864</color>
+    <color name="green_700">#68EB72</color>
     <color name="green_600">#68EB72</color>
     <color name="green_500">#95FB9D</color>
     <color name="green_200">#DEFDE0</color>
