[del] 닉네임 조건 삭제

--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -123,10 +123,10 @@
             style="@style/Widget.TextAppearance.Detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.isValidNicknameFormat == false &amp;&amp; viewModel.isValidNicknameFormat != null ? context.getString(R.string.my_nickname_condition_detail) : viewModel.isExistNickname == true ? context.getString(R.string.my_nickname_already_exist_detail) : ``}"
+            android:text="@{viewModel.isExistNickname == true ? @string/my_nickname_already_exist_detail : ``}"
             app:layout_constraintStart_toStartOf="@id/nickname_input"
             app:layout_constraintTop_toBottomOf="@id/nickname_input"
-            tools:text="@string/my_nickname_condition_detail" />
+            tools:text="@string/my_nickname_already_exist_detail" />
 
         <TextView
             android:id="@+id/nickname_length"
