[chore] 버전 정보 하드코딩 -> BuildConfig에서 VERSION_NAME 가져오기

--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -233,11 +233,11 @@
                             android:textAppearance="@style/My.Menu.TextAppearance" />
 
                         <TextView
+                            android:id="@+id/version"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/spacingBase"
                             android:fontFamily="@font/montserrat_sb"
-                            android:text="@string/service_version"
                             android:textColor="@color/gray_200"
                             android:textSize="@dimen/typographyDescription" />
                     </LinearLayout>
