--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,17 +13,17 @@
     <color name="black_transparent">#38000000</color>
 
     <color name="green_700">#68EB72</color>
-    <color name="green_600">#68EB72</color>
+    <color name="green_600">#68EB72</color> <!-- TODO delete -->
     <color name="green_500">#95FB9D</color>
-    <color name="green_200">#DEFDE0</color>
-    <color name="green_100">#EEFEEF</color>
+    <color name="green_200">#E5FEE7</color>
+    <color name="green_100">#EEFEEF</color> <!-- TODO delete -->
 
-    <color name="gray_25">#F8F8F8</color>
-    <color name="gray_50">#EBEBEB</color>
-    <color name="gray_100">#E3E3E3</color>
+    <color name="gray_25">#F8F8F8</color> <!-- TODO delete -->
+    <color name="gray_50">#F8F8F8</color>
+    <color name="gray_100">#EBEBEB</color>
     <color name="gray_150">#CACACA</color>
     <color name="gray_200">#AAAAAA</color>
-    <color name="gray_250">#979797</color>
+    <color name="gray_250">#979797</color> <!-- TODO delete -->
     <color name="gray_300">#858585</color>
     <color name="gray_600">#474747</color>
     <color name="gray_700">#292929</color>
