--- a/app/src/main/res/layout/view_top_app_bar.xml
+++ b/app/src/main/res/layout/view_top_app_bar.xml
@@ -10,29 +10,20 @@
             type="String" />
 
         <variable
-            name="curStep"
-            type="Integer" />
-
-        <variable
-            name="lastStep"
-            type="Integer" />
+            name="step"
+            type="kotlin.Pair&lt;Integer, Integer&gt;" />
 
         <import type="androidx.navigation.Navigation" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/top_app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="@dimen/widgetAppBarHeight">
 
         <ImageView
             android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="1dp"
+            style="@style/Widget.Button.Icon.Navigation"
             android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
-            android:padding="@dimen/spacing12"
             android:src="@drawable/ic_back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,20 +39,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/sign_in_email_title" />
-
-        <TextView
-            android:id="@+id/step"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/spacingBase"
-            android:text="@{@string/step_format(curStep, lastStep)}"
-            android:textAppearance="@style/TextAppearance.Suit.D2"
-            android:textColor="@color/gray_700"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="1/2 단계" />
+            tools:text="Title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
