[feat] 이메일 로그인 > 이메일 입력 화면 변경된 뷰 컬러, 세체 시스템, 뷰 배치 간격 적용

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,9 @@
     <dimen name="spacing14">14dp</dimen>
     <dimen name="spacingBase">16dp</dimen>
 
+    <dimen name="lineSpacing">4dp</dimen>
+    <dimen name="detailTextSpacing">6dp</dimen>
+
     <!-- Widget -->
     <dimen name="widgetAppBarHeight">56dp</dimen>
     <dimen name="widgetBottomDialogHeightBase">312dp</dimen>
