[fix] 이메일 로그인 > 이메일 입력 화면에서 버튼의 로띠가 움직이지 않는 버그 수정

--- a/app/src/main/res/layout/fragment_sign_in_email.xml
+++ b/app/src/main/res/layout/fragment_sign_in_email.xml
@@ -9,6 +9,8 @@
         <variable
             name="viewModel"
             type="com.hyeeyoung.wishboard.presentation.sign.SignViewModel" />
+
+        <import type="com.hyeeyoung.wishboard.presentation.common.types.ProcessStatus" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -90,8 +92,9 @@
             android:layout_marginBottom="@dimen/spacingBase"
             android:enabled="@{viewModel.validEmailFormat == true}"
             android:onClick="@{() -> viewModel.requestVerificationMail()}"
-            android:text="@string/sign_in_email_send_email_button_text"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:text="@{viewModel.signProcessStatus == ProcessStatus.IN_PROGRESS ? `` : @string/sign_in_email_send_email_button_text}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:text="@string/sign_in_email_send_email_button_text" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loading_lottie"
