[feat] 스낵바 변경된 컬러, 서체 시스템, 뷰 배치 간격 적용

--- a/app/src/main/res/layout/snackbar_item.xml
+++ b/app/src/main/res/layout/snackbar_item.xml
@@ -11,7 +11,8 @@
             style="@style/Widget.Snackbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/Widget.Snackbar.TextAppearance"
+            android:textAppearance="@style/TextAppearance.Suit.D2"
+            android:textColor="@color/white"
             tools:text="@string/wish_item_registration_snackbar_text" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
