--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -260,23 +260,16 @@
 
     <style name="Widget.Snackbar" parent="">
         <item name="android:background">@drawable/shape_border_radius_45</item>
-        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:backgroundTint">@color/gray_700</item>
         <item name="android:gravity">center</item>
-        <item name="android:lineSpacingExtra">2dp</item>
+        <item name="android:lineSpacingExtra">@dimen/lineSpacing</item>
         <item name="android:paddingStart">28dp</item>
         <item name="android:paddingEnd">28dp</item>
         <item name="android:paddingTop">@dimen/spacingBase</item>
         <item name="android:paddingBottom">@dimen/spacingBase</item>
         <item name="android:layout_marginStart">@dimen/spacingBase</item>
-        <item name="android:layout_marginEnd">@dimen/spacing20</item>
-        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_marginEnd">@dimen/spacingBase</item>
         <item name="android:layout_marginBottom">@dimen/spacingBase</item>
-    </style>
-
-    <style name="Widget.Snackbar.TextAppearance" parent="">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">@dimen/typographyBase</item>
-        <item name="android:fontFamily">@font/suit_m</item>
     </style>
 
     <style name="My.Menu.Style" parent="">
